# fastapi-h5

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
example/: app.py  consumer.ipynb  publisher.ipynb
src/fastapi_h5/: __init__.py  h5routes.py  h5types.py  utils.py
tests/: test_h5dict.py  test_lambda.py
